name:                DocTest
version:             0.2.0
stability:           experimental
synopsis:            Test interactive Haskell examples
description:         DocTest checks examples in source code comments.
                     It is modeled after doctest for Python
                     (<http://docs.python.org/library/doctest.html>).
                     .
                     Documentation is at <http://haskell.org/haskellwiki/DocTest>.
category:            Testing
homepage:            http://haskell.org/haskellwiki/DocTest
license:             MIT
license-file:        LICENSE
copyright:           (c) 2009-2011 Simon Hengel
author:              Simon Hengel
maintainer:          simon.hengel@wiktory.org
build-type:          Simple
cabal-version:       >= 1.6

source-repository head
    type:            git
    location:        git://github.com/sol/doctest-haskell.git

executable doctest
    ghc-options:     -Wall
    hs-source-dirs:  src
    main-is:         Main.hs
    other-modules:
                      Interpreter
                    , Options
                    , HaddockBackend.Api
                    , HaddockBackend.Markup

    build-depends:
                       base       >= 4.0  && < 4.4
                     , containers >= 0.3  && < 0.5
                     , haddock    >= 2.8  && < 2.10
                     , ghc        >= 6.12 && < 7.2
                     , ghc-paths  == 0.1.*
                     , HUnit      == 1.2.*
                     , process    == 1.0.*
