name:             doctest
version:          0.9.2
synopsis:         Test interactive Haskell examples
description:      The doctest program checks examples in source code comments.
                  It is modeled after doctest for Python
                  (<http://docs.python.org/library/doctest.html>).
                  .
                  Documentation is at
                  <https://github.com/sol/doctest-haskell#readme>.
category:         Testing
bug-reports:      https://github.com/sol/doctest-haskell/issues
homepage:         https://github.com/sol/doctest-haskell#readme
license:          MIT
license-file:     LICENSE
copyright:        (c) 2009-2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
extra-source-files: example/example.cabal
                  , example/src/Example.hs
                  , example/test/doctests.hs

source-repository head
  type: git
  location: https://github.com/sol/doctest-haskell

library
  exposed-modules:
      Test.DocTest
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  other-modules:
      Extract
    , GhcUtil
    , Interpreter
    , Location
    , Help
    , Parse
    , Paths_doctest
    , Property
    , Report
    , Run
    , Util
  build-depends:
      base        >= 4.0  && < 4.7
    , ghc         >= 6.12 && < 7.8
    , syb
    , deepseq
    , directory
    , filepath
    , process
    , ghc-paths   == 0.1.*
    , transformers

executable doctest
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded
  hs-source-dirs:
      driver
  build-depends:
      base        >= 4.0  && < 4.7
    , doctest

test-suite spec
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -threaded
  cpp-options:
      -DTEST
  hs-source-dirs:
      src, test
  build-depends:
      base        >= 4.0  && < 4.7
    , ghc         >= 6.12 && < 7.8
    , syb
    , deepseq
    , directory
    , process
    , ghc-paths   == 0.1.*
    , transformers
    , HUnit       == 1.2.*
    , hspec       >= 1.3
    , QuickCheck  >= 2.5
    , stringbuilder >= 0.2
    , silently
    , filepath

test-suite doctests
  main-is:
      doctests.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -threaded
  hs-source-dirs:
      test
  build-depends:
      base
    , doctest
