name:             doctest
version:          0.9.7
synopsis:         Test interactive Haskell examples
description:      The doctest program checks examples in source code comments.
                  It is modeled after doctest for Python
                  (<http://docs.python.org/library/doctest.html>).
                  .
                  Documentation is at
                  <https://github.com/sol/doctest-haskell#readme>.
category:         Testing
bug-reports:      https://github.com/sol/doctest-haskell/issues
homepage:         https://github.com/sol/doctest-haskell#readme
license:          MIT
license-file:     LICENSE
copyright:        (c) 2009-2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
extra-source-files: example/example.cabal
                  , example/src/Example.hs
                  , example/test/doctests.hs

source-repository head
  type: git
  location: https://github.com/sol/doctest-haskell

library
  exposed-modules:
      Test.DocTest
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  other-modules:
      Extract
    , GhcUtil
    , Interpreter
    , Location
    , Help
    , Parse
    , Paths_doctest
    , Property
    , Runner
    , Runner.Example
    , Run
    , Util
  build-depends:
      base          == 4.*
    , ghc           >= 7.0 && < 7.8
    , syb           >= 0.3 && < 0.5
    , deepseq
    , directory
    , filepath
    , process
    , ghc-paths     >= 0.1.0.9
    , transformers

executable doctest
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded
  hs-source-dirs:
      driver
  build-depends:
      base          == 4.*
    , doctest

test-suite spec
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -threaded
  cpp-options:
      -DTEST
  hs-source-dirs:
      src, test
  c-sources:
      test/integration/with-cbits/foo.c
  build-depends:
      base-compat   >= 0.2.1
    , ghc
    , syb
    , deepseq
    , directory
    , filepath
    , process
    , ghc-paths
    , transformers

    , HUnit
    , hspec         >= 1.3
    , QuickCheck    >= 2.5
    , stringbuilder >= 0.4
    , silently      >= 1.2.4
    , setenv

test-suite doctests
  main-is:
      doctests.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -threaded
  hs-source-dirs:
      test
  build-depends:
      base
    , doctest
