name:             doctest
version:          0.10.1
synopsis:         Test interactive Haskell examples
description:      The doctest program checks examples in source code comments.
                  It is modeled after doctest for Python
                  (<http://docs.python.org/library/doctest.html>).
                  .
                  Documentation is at
                  <https://github.com/sol/doctest#readme>.
category:         Testing
bug-reports:      https://github.com/sol/doctest/issues
homepage:         https://github.com/sol/doctest#readme
license:          MIT
license-file:     LICENSE
copyright:        (c) 2009-2015 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
extra-source-files: example/example.cabal
                  , example/src/Example.hs
                  , example/test/doctests.hs

source-repository head
  type: git
  location: https://github.com/sol/doctest

library
  exposed-modules:
      Test.DocTest
  ghc-options:
      -Wall
  hs-source-dirs:
      src, ghci-wrapper/src
  other-modules:
      Extract
    , GhcUtil
    , Interpreter
    , Location
    , Help
    , PackageDBs
    , Parse
    , Paths_doctest
    , Property
    , Runner
    , Runner.Example
    , Run
    , Util
    , Sandbox
    , Language.Haskell.GhciWrapper
  build-depends:
      base          == 4.*
    , base-compat   >= 0.4.2
    , ghc           >= 7.0 && < 7.12
    , syb           >= 0.3
    , deepseq
    , directory
    , filepath
    , process
    , ghc-paths     >= 0.1.0.9
    , transformers

executable doctest
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded
  hs-source-dirs:
      driver
  build-depends:
      base          == 4.*
    , doctest

test-suite spec
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -threaded
  cpp-options:
      -DTEST
  hs-source-dirs:
      test, src, ghci-wrapper/src
  c-sources:
      test/integration/with-cbits/foo.c
  build-depends:
      base
    , ghc
    , syb
    , deepseq
    , directory
    , filepath
    , process
    , ghc-paths
    , transformers

    , base-compat
    , HUnit
    , hspec         >= 1.5.1
    , QuickCheck    >= 2.8.2
    , stringbuilder >= 0.4
    , silently      >= 1.2.4
    , setenv

test-suite doctests
  main-is:
      doctests.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -threaded
  hs-source-dirs:
      test
  build-depends:
      base
    , doctest
